[gd_scene load_steps=11 format=2]

[ext_resource path="res://OpenSansBold.tres" type="DynamicFont" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://Database.gd" type="Script" id=3]
[ext_resource path="res://FunctionSettings.gd" type="Script" id=4]
[ext_resource path="res://conSetup.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.16, 0.678, 1, 0.12549 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.4, 0.4, 0.4, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 16.0
content_margin_bottom = 16.0
bg_color = Color( 0.2, 0.2, 0.2, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.333333, 0.333333, 0.333333, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.266667, 0.266667, 0.266667, 1 )
border_blend = true

[sub_resource type="Theme" id=5]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 100.0
margin_bottom = 24.0
theme = SubResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Database" type="Node" parent="."]
script = ExtResource( 3 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -100.0
margin_bottom = -24.0
size_flags_horizontal = 3
size_flags_vertical = 3
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer"]
margin_right = 1125.0
margin_bottom = 615.0
rect_min_size = Vector2( 120, 415 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/ScrollContainer"]
margin_right = 104.0
margin_bottom = 251.0

[node name="btnFavorites" type="Button" parent="HSplitContainer/ScrollContainer/VBoxContainer"]
margin_right = 104.0
margin_bottom = 47.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Favorites"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnAll" type="Button" parent="HSplitContainer/ScrollContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 104.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 1 )
text = "All"

[node name="btnFilter" type="Button" parent="HSplitContainer/ScrollContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 104.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 1 )
text = "Filter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnRandom" type="Button" parent="HSplitContainer/ScrollContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 104.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 1 )
text = "Random"

[node name="btnSettings" type="Button" parent="HSplitContainer/ScrollContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 104.0
margin_bottom = 251.0
custom_fonts/font = ExtResource( 1 )
text = "Settings"

[node name="conMain" type="Control" parent="HSplitContainer"]
visible = false
margin_left = 132.0
margin_right = 1125.0
margin_bottom = 615.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/conMain"]
margin_right = 993.0
margin_bottom = 615.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tree" parent="HSplitContainer/conMain/VBoxContainer"]
margin_right = 993.0
margin_bottom = 615.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
columns = 6
allow_reselect = true
hide_folding = true
hide_root = true
select_mode = 1

[node name="ItemList" type="ItemList" parent="HSplitContainer/conMain/VBoxContainer/Tree"]
visible = false
margin_left = 14.0
margin_top = 4.0
margin_right = 892.0
margin_bottom = 575.0
rect_min_size = Vector2( 200, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HSplitContainer/conMain"]

[node name="conSettings" type="Control" parent="HSplitContainer"]
visible = false
margin_left = 132.0
margin_right = 1125.0
margin_bottom = 615.0
script = ExtResource( 4 )

[node name="cmdSRestore" type="Button" parent="HSplitContainer/conSettings"]
anchor_left = 0.000383667
anchor_right = 0.000383667
margin_left = 365.0
margin_top = 376.0
margin_right = 715.0
margin_bottom = 423.0
size_flags_horizontal = 0
text = "Restore Jackbox Games"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdSClearFav" type="Button" parent="HSplitContainer/conSettings"]
margin_left = 365.381
margin_top = 319.0
margin_right = 715.381
margin_bottom = 366.0
text = "Clear Favorites"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cmdSSetup" type="Button" parent="HSplitContainer/conSettings"]
margin_left = 5.0
margin_top = 317.0
margin_right = 355.0
margin_bottom = 364.0
text = "Run Setup Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chkUpdate" type="CheckButton" parent="HSplitContainer/conSettings"]
margin_left = 5.38132
margin_top = 6.08646
margin_right = 355.381
margin_bottom = 70.0865
size_flags_horizontal = 0
text = "Launcher Update Checking"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chkAudio" type="CheckButton" parent="HSplitContainer/conSettings"]
margin_left = 365.381
margin_top = 78.0865
margin_right = 715.381
margin_bottom = 142.086
text = "Audio in Launcher"
align = 1

[node name="chkDebug" type="CheckButton" parent="HSplitContainer/conSettings"]
margin_left = 5.38132
margin_top = 78.0865
margin_right = 355.381
margin_bottom = 142.086
text = "Local Debug Logging"
align = 1

[node name="chkStats" type="CheckButton" parent="HSplitContainer/conSettings"]
margin_left = 365.381
margin_top = 6.08646
margin_right = 715.381
margin_bottom = 70.0865
text = "Anonymous Stats Submissions"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HSplitContainer/conSettings"]
margin_left = 5.38101
margin_top = 224.0
margin_right = 87.381
margin_bottom = 239.0
text = "Webserver"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HSplitContainer/conSettings/Label"]
margin_top = 24.0
margin_right = 40.0
margin_bottom = 39.0
text = "Your IP:"

[node name="Label2" type="Label" parent="HSplitContainer/conSettings/Label"]
margin_top = 48.0
margin_right = 69.0
margin_bottom = 63.0
text = "Access:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chkServer" type="CheckButton" parent="HSplitContainer/conSettings"]
margin_left = 5.381
margin_top = 152.173
margin_right = 355.381
margin_bottom = 216.173
size_flags_horizontal = 0
text = "Local Webserver"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chkSmallList" type="CheckButton" parent="HSplitContainer/conSettings"]
margin_left = 365.381
margin_top = 152.173
margin_right = 715.381
margin_bottom = 216.173
size_flags_horizontal = 0
text = "Small Game List"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chkSkipIntro" type="CheckButton" parent="HSplitContainer/conSettings"]
margin_left = 365.381
margin_top = 226.173
margin_right = 715.381
margin_bottom = 290.173
size_flags_horizontal = 0
text = "Skip Intro Videos"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblIP" type="Label" parent="HSplitContainer/conSettings"]
margin_left = 65.0
margin_top = 248.0
margin_right = 105.0
margin_bottom = 263.0
text = "N/A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblWebsite" type="Label" parent="HSplitContainer/conSettings"]
margin_left = 65.0
margin_top = 272.0
margin_right = 347.0
margin_bottom = 287.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.290196, 0.34902, 0.835294, 1 )
text = "https://foolishpixel.com/jtw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/conSettings"]
margin_left = 719.0
margin_top = 7.0
margin_right = 994.0
margin_bottom = 606.0
custom_colors/default_color = Color( 0.737255, 0.847059, 0.87451, 1 )
text = "Created By: @debugdoug (https://foolishpixel.com)

With help from Akira896#2151 (https://sites.google.com/view/jackbox-esp)

Licensed under CC BY-NC-ND 4.0 View the included LICENSE.txt for full license information.

--- Resources ---
Game Covers: https://www.jackboxgames.com/
Jackbox Covers: https://www.nintendo.com/games/
App Icon: https://thenounproject.com/ - Vectors Market
btn_hover.wav: https://freesound.org - rayolf
buttonchime02up.wav: https://freesound.org - JustinBW
JT_Random.jpg: artuhaxis#1266

--- Libraries ---
Toast by rares45
SQLite by 2shady4u

This software is fan made and not supported by Jackbox Games. Do not contact them for assistance related to this software. This is free software, if you paid for it then you were scammed. This software comes with no warranty.

Jackbox, Jackbox Party Pack, and all associated games listed in this application are property of and owned by Jackbox Games.

А 	В 	Г 	Д 	Є 	Ѕ 	З 	И 	Ѳ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="HSplitContainer/conSettings"]
margin_left = 5.0
margin_top = 376.0
margin_right = 355.0
margin_bottom = 423.0
text = "default"
items = [ "default", null, false, 0, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HSplitContainer/conSettings"]
margin_left = 5.38132
margin_top = 432.0
margin_right = 75.3813
margin_bottom = 447.0
text = "Language"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblEgg" type="Label" parent="HSplitContainer/conSettings"]
margin_left = 14.0
margin_top = 587.173
margin_right = 30.0
margin_bottom = 602.173
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "    "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="conSetup" parent="HSplitContainer" instance=ExtResource( 5 )]
visible = false

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
margin_left = 320.381
margin_top = 67.0
margin_right = 877.381
margin_bottom = 534.0
text = "TO DO:

- Add Filters to Main
  - Will the GUI fit this at the top? Maybe it should be added as a seperate tab \"Filter\"

- Convert Settings \"Enable/Disable\" video skip to 1 checkbox

- Add support for all settings buttons & checkboxes"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="column_title_pressed" from="HSplitContainer/conMain/VBoxContainer/Tree" to="." method="_on_Tree_column_title_pressed"]
[connection signal="item_activated" from="HSplitContainer/conMain/VBoxContainer/Tree" to="." method="_on_Tree_item_activated"]
[connection signal="pressed" from="HSplitContainer/conSettings/cmdSRestore" to="HSplitContainer/conSettings" method="_on_cmdSRestore_pressed"]
[connection signal="pressed" from="HSplitContainer/conSettings/cmdSClearFav" to="HSplitContainer/conSettings" method="_on_cmdSClearFav_pressed"]
[connection signal="pressed" from="HSplitContainer/conSettings/cmdSSetup" to="HSplitContainer/conSettings" method="_on_cmdSSetup_pressed"]
[connection signal="toggled" from="HSplitContainer/conSettings/chkUpdate" to="HSplitContainer/conSettings" method="_on_chkUpdate_toggled"]
[connection signal="toggled" from="HSplitContainer/conSettings/chkAudio" to="HSplitContainer/conSettings" method="_on_chkAudio_toggled"]
[connection signal="toggled" from="HSplitContainer/conSettings/chkDebug" to="HSplitContainer/conSettings" method="_on_chkDebug_toggled"]
[connection signal="toggled" from="HSplitContainer/conSettings/chkStats" to="HSplitContainer/conSettings" method="_on_chkStats_toggled"]
[connection signal="toggled" from="HSplitContainer/conSettings/chkServer" to="HSplitContainer/conSettings" method="_on_chkServer_toggled"]
[connection signal="toggled" from="HSplitContainer/conSettings/chkSmallList" to="HSplitContainer/conSettings" method="_on_chkSmallList_toggled"]
[connection signal="toggled" from="HSplitContainer/conSettings/chkSkipIntro" to="HSplitContainer/conSettings" method="_on_chkSkipIntro_toggled"]
[connection signal="gui_input" from="HSplitContainer/conSettings/lblWebsite" to="HSplitContainer/conSettings" method="_on_lblWebsite_gui_input"]
[connection signal="item_selected" from="HSplitContainer/conSettings/OptionButton" to="HSplitContainer/conSettings" method="_on_OptionButton_item_selected"]
[connection signal="gui_input" from="HSplitContainer/conSettings/lblEgg" to="HSplitContainer/conSettings" method="_on_lblEgg_gui_input"]
